# -AIDD-30-Day-Challenge

./: README.md
Task-02/: solution.md
Task-03/: solution.md
Task-04/: README.md
Task-04/Notes_summarizer/: .env  agent.py  app.py  error.md  pyproject.toml  requirements.txt  tools.py
Task-07/: README.md
Task-08/: README.md
Task-08/calc/: .gitignore  CLAUDE.md  GEMINI.md  main.py  pyproject.toml  requirements.txt  run_ui.py
Task-08/calc/.specify/memory/: constitution.md
Task-08/calc/history/prompts/001-calculator-app/: 0004-generate-calculator-app-plan.plan.prompt.md  0005-generate-calculator-app-tasks.tasks.prompt.md  0006-update-tasks-md-to-use-uv-init.tasks.prompt.md  0007-implement-calculator-feature.green.prompt.md
Task-08/calc/history/prompts/1-calculator-app/: 0001-create-calculator-feature-spec.spec.prompt.md  0002-refine-calculator-spec-with-clarifications.spec.prompt.md
Task-08/calc/history/prompts/constitution/: 0001-update-project-constitution-with-principles.constitution.prompt.md
Task-08/calc/specs/001-calculator-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Task-08/calc/specs/001-calculator-app/contracts/: README.md
Task-08/calc/specs/1-calculator-app/: spec.md
Task-08/calc/specs/1-calculator-app/checklists/: requirements.md
Task-08/calc/src/calculator/: history.py  main.py  operations.py  ui.py
Task-08/calc/tests/: test_history.py  test_main.py  test_operations.py
task-06/: solution.md
task_01/: solution.md
